# binate

./: Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
binate/: Cargo.toml  all.html  enum.Code.html  index.html  sidebar-items.js  struct.Error.html  struct.Payload.html  struct.PayloadBuilder.html  trait.RSocket.html  type.Data.html  type.Flux.html  type.Metadata.html  type.Mono.html  type.Result.html
binate/connection/: enum.ConnectionStatus.html  index.html  sidebar-items.js  struct.RequestCounter.html  struct.StreamIdProvider.html  trait.DuplexConnection.html
binate/error/: enum.Code.html  struct.Error.html  type.Result.html
binate/frame/: constant.MAX_U31.html  constant.MAX_U63.html  enum.DecodeError.html  enum.Frame.html  enum.FrameType.html  index.html  sidebar-items.js  struct.Flags.html  struct.U24.html  struct.Version.html  trait.Decode.html  trait.Encode.html
binate/frame/codec/: index.html  (+16 more)
binate/mimetype/: constant.DEFAULT_MIMETYPE.html  enum.WellKnownMimeType.html  index.html  sidebar-items.js
binate/payload/: struct.Payload.html  struct.PayloadBuilder.html  struct.PayloadChunks.html  type.Data.html  type.Metadata.html
binate/prelude/: constant.DEFAULT_MIMETYPE.html  index.html  sidebar-items.js  struct.Payload.html  struct.PayloadBuilder.html  struct.PayloadChunks.html  type.Data.html  type.Metadata.html
binate/rsocket/: trait.RSocket.html  type.Flux.html  type.Mono.html
binate/src/: consts.rs  error.rs  lib.rs  mimetype.rs  mod.rs  payload.rs  prelude.rs  rsocket.rs  runtime.rs  test_helpers.rs  types.rs
(+138 files in other folders)
