[package]
name = "binate"
version = "0.0.1"
authors = ["Aaron Taner <mapkts@gmail.com>"]
description = "WIP"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/binate"
homepage = "https://github.com/mapkts/binate"
repository = "https://github.com/mapkts/binate"
readme = "README.md"
edition = "2018"

[features]
# Features that enabled by default
default = []

# Include all features
full = ["frame"]

frame = []

[dependencies]
async-trait = "0.1.50"
bitflags = "1.2"
bytes = "1"
dashmap = "4.0.2"
tokio = { version = "1.8", features = ["rt", "sync"] }
tokio-stream = "0.1.6"
tracing = "0.1"

[target.'cfg(loom)'.dependencies]
loom = "0.5"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

